Begin : Initialize card

--- a/BangOnline/BangOnline/BangOnline.csproj
+++ b/BangOnline/BangOnline/BangOnline.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="Card\Card.cs" />
     <Compile Include="Card\Character.cs" />
-    <Compile Include="Card\Deck.cs" />
+    <Compile Include="Common\Deck.cs" />
     <Compile Include="Card\Effect\Bang.cs" />
     <Compile Include="Card\Effect\Discard.cs" />
     <Compile Include="Card\Effect\Draw.cs" />
@@ -65,11 +65,11 @@
     <Compile Include="Card\Equipment\ModRange.cs" />
     <Compile Include="Card\Equipment\Stash.cs" />
     <Compile Include="Card\Equipment\Weapon.cs" />
-    <Compile Include="Commom\Client.cs" />
-    <Compile Include="Commom\Enum.cs" />
-    <Compile Include="Commom\GameState.cs" />
-    <Compile Include="Commom\IRunning.cs" />
-    <Compile Include="Commom\ISerialize.cs" />
+    <Compile Include="Common\Client.cs" />
+    <Compile Include="Common\Enum.cs" />
+    <Compile Include="Common\GameState.cs" />
+    <Compile Include="Common\IRunning.cs" />
+    <Compile Include="Common\ISerialize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
